task-01/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-01-deployment
  labels:
      app: task-01
spec:
  replicas: 3
  selector:
    matchLabels:
      app: task-01
  template:
    metadata:
      labels:
        app: task-01
    spec:
      containers:
      - name: task-01
        image: task-01:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 9000
