task-01/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: task-01
  labels:
    app: task-01
spec:
  containers:
  - name: task-01
    image: task-01:v1
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 9000
