task-01/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-01-service
spec:
  type: NodePort
  selector:
    app: task-01
  ports:
  - port: 9000
    targetPort: 9000
