task-01/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-01-ingress
  labels:
      name: task-01-ingress
spec:
  defaultBackend:
      service:
        name: task-01-service
        port:
            number: 9001
